CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
PROJECT(lane_mapping)

SET(CMAKE_BUILD_TYPE Debug)

OPTION(BUILD_UNIT_TESTS "Enable building unit tests" ON)

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS}/unsupported)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem thread)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
# TARGET_LINK_LIBRARIES(${Boost_LIBRARIES})

FIND_PACKAGE(Pangolin)
INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})
# TARGET_LINK_LIBRARIES(${Pangolin_LIBRARIES})

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
# TARGET_LINK_LIBRARIES(${OpenCV_LIBS})

FIND_PACKAGE(GTSAM REQUIRED)
INCLUDE_DIRECTORIES(${GTSAM_INCLUDE_DIRS})
# TARGET_LINK_LIBRARIES(${GTSAM_LIBRARIES})

FIND_PACKAGE(yaml-cpp REQUIRED)
INCLUDE_DIRECTORIES(${YAML_CPP_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
FILE(GLOB SOURCES_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} yaml-cpp ${Boost_LIBRARIES})

ADD_EXECUTABLE(lane_mapping_demo demo.cc)
TARGET_LINK_LIBRARIES(lane_mapping_demo ${PROJECT_NAME} yaml-cpp ${Boost_LIBRARIES})

IF (BUILD_UNIT_TESTS)
    MESSAGE("Building Unit Test")
    ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/unit_test)
ENDIF ()